// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Preloader /> it renders Preloader 1`] = `
<div
  className="mfui-preloader mfui-preloader_color_default mfui-preloader_size_medium"
>
  <div
    className="mfui-preloader__item mfui-preloader__item_first"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_second"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_third"
  />
</div>
`;

exports[`<Preloader /> it renders Preloader with black color 1`] = `
<div
  className="mfui-preloader mfui-preloader_color_black mfui-preloader_size_medium"
>
  <div
    className="mfui-preloader__item mfui-preloader__item_first"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_second"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_third"
  />
</div>
`;

exports[`<Preloader /> it renders Preloader with custom className 1`] = `
<div
  className="mfui-preloader mfui-preloader_color_default mfui-preloader_size_medium test-class"
>
  <div
    className="mfui-preloader__item mfui-preloader__item_first"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_second"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_third"
  />
</div>
`;

exports[`<Preloader /> it renders Preloader with small size 1`] = `
<div
  className="mfui-preloader mfui-preloader_color_default mfui-preloader_size_small"
>
  <div
    className="mfui-preloader__item mfui-preloader__item_first"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_second"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_third"
  />
</div>
`;

exports[`<Preloader /> it renders Preloader with white color 1`] = `
<div
  className="mfui-preloader mfui-preloader_color_white mfui-preloader_size_medium"
>
  <div
    className="mfui-preloader__item mfui-preloader__item_first"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_second"
  />
  <div
    className="mfui-preloader__item mfui-preloader__item_third"
  />
</div>
`;
